<?xml version="1.0" encoding = "utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_menu"
        android:enabled="true"
        android:icon="@drawable/menu48"
        android:title="@string/main"
        />

    <item
        android:id="@+id/navigation_expenses"
        android:enabled="true"
        android:icon="@drawable/expenses48"
        android:title="@string/second"
        />

    <item
        android:id="@+id/navigation_graph"
        android:enabled="true"
        android:icon="@drawable/graph48"
        android:title="@string/third"
        />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/setting48"
        android:title="@string/fourth"
        />

</menu>