<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/fragment_spending_editButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/edit"
        android:background="@drawable/border_4dp_lite_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_spending_itemButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/add_item"
        android:background="@drawable/border_4dp_yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_spending_editButton" />

    <Button
        android:id="@+id/fragment_spending_graphButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/graph"
        android:background="@drawable/border_4dp_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_spending_itemButton" />

    <View
        android:id="@+id/fragment_spending_view1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_spending_editButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_spending_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_spending_view1"/>
</androidx.constraintlayout.widget.ConstraintLayout>