<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fragment_main_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@color/orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/fragment_main_returnButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/gray1"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/fragment_main_returnButton"
        app:layout_constraintStart_toEndOf="@id/fragment_main_returnButton"/>

    <android.widget.Button
        android:id="@+id/fragment_main_exitButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/gray1"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/fragment_main_exitButton"
        app:layout_constraintStart_toStartOf="@id/fragment_main_exitButton"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/fragment_main_title"
        app:layout_constraintStart_toStartOf="@id/fragment_main_title"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toBottomOf="@id/fragment_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom_nav" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="@id/bottom_nav"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:menu="@menu/menu_bottom"
        android:background="@color/orange"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>